app/assets/stylesheets/users.scss
// Place all the styles related to the users controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

div.user-show {
  width: 92%;
  height: 80vh;
  color: ivory;
  text-shadow: 1px 1px 3px black;
  position: fixed;
}

div.user-show * {
  padding: 10px;
}

div.user-show img.user-pic {
  object-fit: cover; /* Center the image within the element */
  object-position: top;
  margin: auto;
  height: 250px;
  width: 250px;
  border-radius: 10px;
  -webkit-transition: all 0.5s ease; /* Safari and Chrome */
  -moz-transition: all 0.5s ease; /* Firefox */
  -ms-transition: all 0.5s ease; /* IE 9 */
  -o-transition: all 0.5s ease; /* Opera */
  transition: all 0.5s ease;;
  border-radius: 100%;
}

div.user-bio {
  text-align: center;
  width: 25%;
  height: 80%;
  float: left;
  position: fixed;
  background-color: rgba(25,25,25,0.5);
  border-radius: 10px;
  box-shadow: 5px 5px 5px 5px black;
}

div.user-reviews {
  font-size: 18px;
  height: 100%;
  float: right;
  overflow-y: auto;
  background-color: rgba(25,25,25,0.75);
  border-radius: 10px;
  box-shadow: 5px 5px 5px 5px black;
  width: 69%;
  overflow: hidden;
  position: relative;
}
div.user-reviews h2 {
  text-align: center;
  width: 95%;
}
div.reviews-list {
  height: 100%;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: -20px; /* Decrease this value for cross-browser compatibility */
  overflow: auto;
}

div.professor-thumb {
  float: left;
  -webkit-transition: all 0.5s ease; /* Safari and Chrome */
  -moz-transition: all 0.5s ease; /* Firefox */
  -ms-transition: all 0.5s ease; /* IE 9 */
  -o-transition: all 0.5s ease; /* Opera */
  transition: all 0.5s ease;
}

div.professor-thumb h5 {
  position: relative;
  padding: 0;
  margin: 0;
}

div.professor-thumb:hover {
  -webkit-filter: brightness(200%);
  -moz-filter:brightness(200%); /* Firefox */
  -ms-filter:brightness(200%); /* IE 9 */
  -o-filter:brightness(200%); /* Opera */
  filter:brightness(200%);
}

div.professor-thumb img {
  object-fit: cover; /* Center the image within the element */
  object-position: top;
  width: 100px;
  height: 100px;
  border-radius: 100%;
}


li.review-item {
  text-align: center;
  margin: auto;
  padding: 5px;
}

div.review-content {
  position: relative;
  text-align: center;
}

div.edit-and-delete {
  float: right;
  font-style: italic;
  padding: 0;
  margin: auto;
  position: relative;
  left: 5%;
  width: 25%;
  color: ivory;
}

div.options {
  padding: 0px;
  position: relative;
  bottom: 25px;
}

button.edit-review {
  color: rgb(255, 184, 0);
  cursor: inherit;
  text-shadow: 1px 1px 3px black;
  text-decoration: underline;
}
button.delete-review {
  color: rgb(255, 59, 59);
  cursor: inherit;
  text-shadow: 1px 1px 3px black;
  text-decoration: underline;
}
button.edit-review:hover {
  text-shadow: 3px 3px 10px white;
  cursor: inherit;
}
button.delete-review:hover {
  text-shadow: 3px 3px 10px white; //glow
  cursor: inherit;
}

